<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/popup_info_awal"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/trush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="58dp"
        android:src="@drawable/trush"
        app:layout_constraintBottom_toTopOf="@+id/ket_lipas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/ket_lipas"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="25dp"
        android:paddingStart="20sp"
        android:text="@string/membantu"
        android:textColor="#FFFF"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trush"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/log_screen"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/btn_custom"
            android:text="@string/login"
            android:textColor="#3DA472"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/Reg_screen"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_custom"
            android:text="@string/register"
            android:textColor="#3DA472"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/log_screen" />


    </androidx.constraintlayout.widget.ConstraintLayout>







</androidx.constraintlayout.widget.ConstraintLayout>
