<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/page_login"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/selamat"
        android:text="@string/masuk"
        android:textSize="36sp"
        android:textColor="#FFFF"
        android:textStyle="bold"
        android:layout_marginTop="150dp"
        android:layout_marginStart="120dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/masuk1"
        android:textSize="30sp"
        android:textColor="#FFFF"
        android:textStyle="bold"
        android:layout_marginStart="140dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_marginTop="130dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nama_login"
            android:text="@string/email"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginStart="70dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:id="@+id/et_nama_login"
            android:background="@drawable/radius_edittext"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:ems="10"
            android:hint="Masukan nama"
            android:textColorHint="#5F5F5F"
            android:lines="1"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/nama_login"
            app:layout_constraintStart_toStartOf="@id/nama_login"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pass_login"
            android:text="@string/pasword"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/et_nama_login"
            app:layout_constraintStart_toStartOf="@id/nama_login"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:id="@+id/et_pass_login"
            android:background="@drawable/radius_edittext"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:lines="1"
            android:hint="Masukan password"
            android:textColorHint="#5F5F5F"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/pass_login"
            app:layout_constraintStart_toStartOf="@id/et_nama_login"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/hideshow_login"
            android:src="@drawable/visibility_off"
            app:layout_constraintTop_toBottomOf="@id/pass_login"
            app:layout_constraintEnd_toEndOf="@id/et_pass_login"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="11dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lupa_pass"
            android:text="Lupa Password?"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:textColor="#41C5B5"
            app:layout_constraintTop_toBottomOf="@id/et_pass_login"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:id="@+id/masuk_home"
            android:layout_marginTop="70dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/radiuspage_daftar"
            android:textColorHighlight="#000000"
            android:text="@string/login"
            android:textSize="21sp"
            android:textColor="#FFFF"
            app:layout_constraintTop_toBottomOf="@id/et_pass_login"
            app:layout_constraintStart_toStartOf="@id/et_pass_login"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/no_Akun"
            android:text="Belum punya akun?"
            android:textSize="15sp"
            android:textColor="#000000"
            android:layout_marginTop="5dp"
            android:layout_marginStart="6dp"
            app:layout_constraintTop_toBottomOf="@id/masuk_home"
            app:layout_constraintStart_toStartOf="@id/masuk_home"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/masukKe_daftar"
            android:text="Daftar"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="2dp"
            android:textColor="#41C5B5"
            app:layout_constraintTop_toBottomOf="@id/masuk_home"
            app:layout_constraintStart_toEndOf="@id/no_Akun"/>


    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>