<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- layout header -->
    <RelativeLayout
        android:id="@+id/layout_header3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_hijau_view"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_metode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="27dp">

            <ImageView
                android:id="@+id/toll_kembali4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:src="@drawable/back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_paket4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="95dp"
                android:text="Pembayaran"
                android:textColor="@color/white"
                android:textSize="21sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/toll_kembali4"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:src="@drawable/notifikasi"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="630dp"
        android:id="@+id/layout_ground"
        android:background="@drawable/radius"
        android:backgroundTint="#F2F2F2"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_wallet"
            android:text="E-Wallet"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="50dp"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="295dp"
            android:layout_height="55dp"
            android:id="@+id/layout_dana"
            app:layout_constraintTop_toBottomOf="@id/tv_wallet"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@id/tv_wallet"
            android:background="@drawable/radius"
            android:backgroundTint="#19A199">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_dana"
                android:layout_marginStart="20dp"
                android:text="@string/dna"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="15dp"
                app:layout_constraintTop_toTopOf="@id/tv_dana"
                app:layout_constraintBottom_toBottomOf="@id/tv_dana">


                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circlebtn"
                    tools:ignore="TouchTargetSizeCheck" />

            </RadioGroup>


        </androidx.constraintlayout.widget.ConstraintLayout>


        <!-- layout ovo -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="295dp"
            android:layout_height="55dp"
            android:id="@+id/layout_ovo"
            app:layout_constraintTop_toBottomOf="@id/layout_dana"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/tv_wallet"
            android:background="@drawable/radius"
            android:backgroundTint="#A22EBE">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_ovo"
                android:layout_marginStart="20dp"
                android:text="@string/ov"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="15dp"
                app:layout_constraintTop_toTopOf="@id/tv_ovo"
                app:layout_constraintBottom_toBottomOf="@id/tv_ovo">


                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circlebtn"
                    tools:ignore="TouchTargetSizeCheck" />

            </RadioGroup>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- layout banking -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="295dp"
            android:layout_height="55dp"
            android:id="@+id/layout_bank"
            app:layout_constraintTop_toBottomOf="@id/layout_ovo"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/tv_wallet"
            android:background="@drawable/radius"
            android:backgroundTint="#269746">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_bank"
                android:layout_marginStart="20dp"
                android:text="@string/bank"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="15dp"
                app:layout_constraintTop_toTopOf="@id/tv_bank"
                app:layout_constraintBottom_toBottomOf="@id/tv_bank">


                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circlebtn"
                    tools:ignore="TouchTargetSizeCheck" />

            </RadioGroup>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_ket_jmlh"
            android:text="@string/jumlah"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/layout_bank"
            app:layout_constraintStart_toStartOf="@id/layout_bank"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:id="@+id/card_jmlh"
            android:layout_marginStart="120dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="141dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ket_jmlh"
            app:layout_constraintCircleRadius="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nominal"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:textColorLink="@color/purple_500"
                android:textColor="#77AD64"/>


        </androidx.cardview.widget.CardView>


        <Button
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:id="@+id/lanjut_konfir"
            app:layout_constraintTop_toBottomOf="@id/card_jmlh"
            app:layout_constraintStart_toStartOf="@id/tv_ket_jmlh"
            app:layout_constraintEnd_toEndOf="@id/tv_ket_jmlh"
            android:layout_marginStart="23dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/radius"
            android:backgroundTint="#4FBF67"
            android:textAllCaps="false"
            android:text="@string/konfirmasibyr"
            android:textColor="@color/white"/>




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>